--- a/app/src/main/res/layout/custom_dialog_image_picker.xml
+++ b/app/src/main/res/layout/custom_dialog_image_picker.xml
@@ -1,119 +1,104 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:app="http://schemas.android.com/apk/res-auto">
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    style="@style/MainConstraintStyle"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:backgroundTint="@color/white"
+    android:layout_marginStart="@dimen/_20sdp"
+    android:layout_marginEnd="@dimen/_20sdp"
+    android:background="@drawable/rounded_dialog_corner">
+
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/clCustomDialog"
-        android:background="@drawable/round_corner_bg"
-        android:backgroundTint="@color/white"
-        style="@style/MainConstraintStyle"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/_50sdp"
-        android:layout_marginEnd="@dimen/_50sdp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:paddingBottom="@dimen/_10sdp"
+        android:layout_height="wrap_content">
 
-
-        <ImageView
-            android:id="@+id/ivClose"
-            app:layout_constraintEnd_toEndOf="@id/clCustomDialog"
-           app:layout_constraintTop_toTopOf="@id/clCustomDialog"
-            android:src="@drawable/cancel_close"
-            android:layout_width="@dimen/_30sdp"
-            android:layout_gravity="right|top"
-            android:visibility="gone"
-            android:layout_height="@dimen/_30sdp"
-            app:tint="@color/red" />
-
+        <Button
+            android:id="@+id/btnUploadReceipt"
+            style="@style/CustomButtonStyle"
+            android:layout_width="@dimen/_136sdp"
+            android:layout_height="@dimen/_45sdp"
+            android:layout_marginStart="@dimen/_5sdp"
+            android:layout_marginTop="@dimen/_30sdp"
+            android:backgroundTint="@color/green"
+            android:text="@string/upload_receipt"
+            android:textStyle="normal"
+            android:visibility="visible"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/txtUploadReceipt"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:textSize="@dimen/_12ssp"
-            android:textStyle="bold"
-            android:ellipsize="end"
-            android:maxLength="15"
+            android:layout_marginTop="@dimen/_10sdp"
+            android:text="Image 100.jpg"
             android:textColor="@color/black"
-            android:text="@string/upload_receipt"
-          app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="@dimen/_30sdp"
+            android:textSize="@dimen/_12ssp"
+            android:maxLength="15"
+            android:textAlignment="center"
+            app:layout_constraintStart_toStartOf="@id/btnUploadReceipt"
+            app:layout_constraintEnd_toEndOf="@id/btnUploadReceipt"
+            app:layout_constraintTop_toTopOf="@id/btnUploadReceipt"
+            app:layout_constraintBottom_toBottomOf="@id/btnUploadReceipt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
+
 
         <ImageView
             android:id="@+id/ivFileUpload"
-            app:layout_constraintStart_toEndOf="@id/txtUploadReceipt"
-            app:layout_constraintTop_toTopOf="@id/txtUploadReceipt"
-            app:layout_constraintBottom_toBottomOf="@id/txtUploadReceipt"
+            app:layout_constraintStart_toEndOf="@id/btnUploadReceipt"
+            app:layout_constraintTop_toTopOf="@id/btnUploadReceipt"
+            app:layout_constraintBottom_toBottomOf="@id/btnUploadReceipt"
             android:layout_width="@dimen/_20sdp"
             android:layout_marginStart="@dimen/_1sdp"
             android:src="@drawable/upload_file"
-            android:layout_height="@dimen/_20sdp"
+            android:layout_height="@dimen/_30sdp"
             app:tint="@color/textBlue" />
 
-
-        <TextView
+        <Button
             android:id="@+id/txtProceed"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:textSize="@dimen/_12ssp"
-            android:textStyle="bold"
-            android:textColor="@color/black"
+            style="@style/CustomButtonStyle"
+            android:layout_width="@dimen/_136sdp"
+            android:layout_height="@dimen/_45sdp"
+            android:layout_marginStart="@dimen/_5sdp"
+            android:layout_marginTop="@dimen/_10sdp"
+            android:backgroundTint="@color/green"
             android:text="@string/proceed"
+            android:textStyle="normal"
             android:visibility="gone"
-            app:layout_constraintTop_toBottomOf="@id/txtUploadReceipt"
-            android:layout_marginTop="@dimen/_10sdp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/btnUploadReceipt" />
 
-
-
-        <TextView
+        <Button
             android:id="@+id/txtSkipAndProceed"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:textSize="@dimen/_12ssp"
-            android:textStyle="bold"
-            android:textColor="@color/black"
+            style="@style/CustomButtonStyle"
+            android:layout_width="@dimen/_136sdp"
+            android:layout_height="@dimen/_45sdp"
+            android:layout_marginStart="@dimen/_5sdp"
+            android:layout_marginTop="@dimen/_10sdp"
+            android:backgroundTint="@color/blueButton"
             android:text="@string/skip_and_proceed"
-            app:layout_constraintTop_toBottomOf="@id/txtProceed"
-            android:layout_marginTop="@dimen/_10sdp"
-            android:layout_marginBottom="@dimen/_10sdp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-
-        <TextView
-            android:id="@+id/txtCancel"
+            android:textStyle="normal"
+            android:visibility="visible"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:textSize="@dimen/_12ssp"
-            android:textStyle="bold"
-            android:visibility="visible"
-            android:padding="@dimen/_5sdp"
-            android:background="@drawable/round_corner_bg"
-            android:backgroundTint="@color/textBlue"
-            android:textColor="@color/white"
-            android:text="@string/cancel"
-            app:layout_constraintTop_toBottomOf="@id/txtSkipAndProceed"
-            android:layout_marginTop="@dimen/_10sdp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="@dimen/_10sdp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-
+            app:layout_constraintTop_toBottomOf="@id/btnUploadReceipt" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <ImageView
+        android:id="@+id/ivCancel"
+        android:layout_width="@dimen/_20sdp"
+        android:layout_height="@dimen/_20sdp"
+        android:src="@drawable/cancel_close"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="8dp"
+        android:clickable="true"
+        app:tint="@color/red" />
 
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</layout>
+</RelativeLayout>
