--- a/app/src/main/res/layout/activity_call_detail_of_customer.xml
+++ b/app/src/main/res/layout/activity_call_detail_of_customer.xml
@@ -54,7 +54,7 @@
             app:layout_constraintTop_toBottomOf="@id/toolbar">
 
             <ScrollView
-                android:id="@+id/paymentInfoOfCustomerScrollView"
+                android:id="@+id/callDetailOfCustomerScrollView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fillViewport="true"
@@ -694,9 +694,10 @@
                 android:backgroundTint="@color/green"
                 android:text="@string/spoke_to_customer"
                 android:textStyle="normal"
+                android:layout_marginTop="@dimen/_10sdp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toBottomOf="@id/ivNotesIcon" />
 
 
             <Button
