Date max length made to 10

--- a/app/src/main/res/layout/activity_details_of_customer.xml
+++ b/app/src/main/res/layout/activity_details_of_customer.xml
@@ -344,6 +344,7 @@
                                 android:textColor="@color/black"
                                 android:textSize="@dimen/_12ssp"
                                 android:textStyle="italic"
+                                android:maxLength="10"
                                 app:layout_constraintBottom_toBottomOf="@id/labelDOB"
                                 app:layout_constraintStart_toEndOf="@id/labelLocation"
                                 app:layout_constraintTop_toTopOf="@id/labelDOB"
