--- a/app/src/main/res/layout/activity_payment_info_of_customer3.xml
+++ b/app/src/main/res/layout/activity_payment_info_of_customer3.xml
@@ -130,7 +130,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="@dimen/_90sdp"
-                                android:text=": Sairaj Naidu"
+                                tools:text=": Sairaj Naidu"
                                 android:textColor="@color/black"
                                 android:textSize="@dimen/_12ssp"
                                 android:textStyle="italic"
@@ -139,6 +139,7 @@
                                 app:layout_constraintTop_toTopOf="@id/labelName" />
 
 
+                            <!--Village==Location-->
                             <TextView
                                 android:id="@+id/labelLocation"
                                 style="@style/common_text_style"
@@ -147,25 +148,42 @@
                                 android:layout_marginTop="@dimen/_10sdp"
                                 android:paddingStart="@dimen/_5sdp"
                                 android:paddingEnd="0dp"
-                                android:text="@string/location"
+                                android:text="@string/village"
                                 app:layout_constraintStart_toStartOf="@id/txtPersonalDetails"
                                 app:layout_constraintTop_toBottomOf="@id/labelName" />
 
 
                             <TextView
-                                android:id="@+id/txtLocation"
+                                android:id="@+id/txtVillageName"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="@dimen/_75sdp"
-                                android:text=": 3km"
+                                android:maxLength="12"
                                 android:textColor="@color/black"
                                 android:textSize="@dimen/_12ssp"
                                 android:textStyle="italic"
                                 app:layout_constraintBottom_toBottomOf="@id/labelLocation"
                                 app:layout_constraintStart_toEndOf="@id/labelLocation"
-                                app:layout_constraintTop_toTopOf="@id/labelLocation" />
+                                app:layout_constraintTop_toTopOf="@id/labelLocation"
+                                tools:text=": Turuvekere" />
+
+                            <!--Distance-->
+                            <TextView
+                                android:id="@+id/txtDistance"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginStart="@dimen/_10sdp"
+                                android:maxLength="12"
+                                android:textColor="@color/black"
+                                android:textSize="@dimen/_12ssp"
+                                android:textStyle="italic"
+                                app:layout_constraintBottom_toBottomOf="@id/labelLocation"
+                                app:layout_constraintStart_toEndOf="@id/txtVillageName"
+                                app:layout_constraintTop_toTopOf="@id/labelLocation"
+                                tools:text=" 3km" />
 
 
+                            <!--Capture==NearBy-->
                             <TextView
                                 android:id="@+id/btnNearBy"
                                 android:layout_width="wrap_content"
@@ -175,13 +193,13 @@
                                 android:backgroundTint="@color/textBlue"
                                 android:gravity="center"
                                 android:padding="@dimen/_5sdp"
-                                android:text="@string/near_by"
-                                android:textSize="@dimen/_11ssp"
+                                android:text="@string/capture"
                                 android:textAlignment="center"
                                 android:textColor="@color/white"
                                 app:layout_constraintBottom_toBottomOf="@id/labelLocation"
                                 app:layout_constraintEnd_toEndOf="parent"
                                 app:layout_constraintTop_toTopOf="@+id/labelLocation" />
+
 
 
                             <TextView
@@ -202,7 +220,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="@dimen/_75sdp"
-                                android:text=": 1:30 pm"
+                                tools:text=": 1:30 pm"
                                 android:textColor="@color/black"
                                 android:textSize="@dimen/_12ssp"
                                 android:textStyle="italic"
@@ -242,7 +260,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="@dimen/_75sdp"
-                                android:text=": 9876543210"
+                                tools:text=": 9876543210"
                                 android:textColor="@color/black"
                                 android:textSize="@dimen/_12ssp"
                                 android:textStyle="italic"
@@ -278,7 +296,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="@dimen/_75sdp"
-                                android:text=": ********4321"
+                                tools:text=": ********4321"
                                 android:textColor="@color/black"
                                 android:textSize="@dimen/_12ssp"
                                 android:textStyle="italic"
@@ -304,7 +322,8 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="@dimen/_75sdp"
-                                android:text=": 1/10/2023"
+                                tools:text=":1/10/2023"
+                                android:maxLength="10"
                                 android:textColor="@color/black"
                                 android:textSize="@dimen/_12ssp"
                                 android:textStyle="italic"
@@ -330,7 +349,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="@dimen/_75sdp"
-                                android:text=": Krishna Naidu"
+                                tools:text=": Krishna Naidu"
                                 android:textColor="@color/black"
                                 android:textSize="@dimen/_12ssp"
                                 android:textStyle="italic"
@@ -369,7 +388,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="@dimen/_75sdp"
-                                android:text=": 65489712345"
+                                tools:text=": 65489712345"
                                 android:textColor="@color/black"
                                 android:textSize="@dimen/_12ssp"
                                 android:textStyle="italic"
@@ -395,7 +414,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="@dimen/_75sdp"
-                                android:text=": Personal Loan"
+                                tools:text=": Personal Loan"
                                 android:textColor="@color/black"
                                 android:textSize="@dimen/_12ssp"
                                 android:textStyle="italic"
@@ -422,7 +441,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="@dimen/_75sdp"
-                                android:text=": 10 days"
+                                tools:text=": 10 days"
                                 android:textColor="@color/black"
                                 android:textSize="@dimen/_12ssp"
                                 android:textStyle="italic"
@@ -448,7 +467,7 @@
                                 style="@style/common_text_style"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="  28/02/2023"
+                                tools:text="  28/02/2023"
                                 app:layout_constraintStart_toEndOf="@id/labelLocation"
                                 app:layout_constraintStart_toStartOf="@id/txtPersonalDetails"
                                 app:layout_constraintTop_toBottomOf="@+id/labelAmountDueAsOn" />
@@ -459,7 +478,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="@dimen/_75sdp"
-                                android:text=": Rs 10,000.00"
+                                tools:text=": Rs 10,000.00"
                                 android:textColor="@color/black"
                                 android:textSize="@dimen/_12ssp"
                                 android:textStyle="italic"
@@ -485,11 +504,11 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="@dimen/_75sdp"
-                                android:text=": Rs 10,00,000.00"
+                                tools:text=": Rs 10,00,000.00"
                                 android:textColor="@color/black"
                                 android:textSize="@dimen/_12ssp"
                                 android:textStyle="italic"
-                                android:visibility="invisible"
+                                android:visibility="visible"
                                 app:layout_constraintBottom_toBottomOf="@id/labelBalanceInterest"
                                 app:layout_constraintStart_toEndOf="@id/labelLocation"
                                 app:layout_constraintTop_toTopOf="@id/labelBalanceInterest" />
@@ -531,7 +550,7 @@
                                 style="@style/common_text_style"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="  30/03/2023"
+                                tools:text="  30/03/2023"
                                 app:layout_constraintStart_toStartOf="@id/txtPersonalDetails"
                                 app:layout_constraintTop_toBottomOf="@+id/labelTotalPayable" />
 
@@ -540,11 +559,11 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="@dimen/_75sdp"
-                                android:text=": Rs 10,000.00"
+                                tools:text=": Rs 10,000.00"
                                 android:textColor="@color/black"
                                 android:textSize="@dimen/_12ssp"
                                 android:textStyle="italic"
-                                android:visibility="invisible"
+                                android:visibility="visible"
                                 app:layout_constraintBottom_toBottomOf="@id/txtTotalPayableDate"
                                 app:layout_constraintStart_toEndOf="@id/labelLocation"
                                 app:layout_constraintTop_toTopOf="@id/labelTotalPayable" />
@@ -559,7 +578,7 @@
                                 android:paddingStart="@dimen/_5sdp"
                                 android:paddingEnd="0dp"
                                 android:text="@string/total_amt_paid"
-                                android:visibility="invisible"
+                                android:visibility="visible"
                                 app:layout_constraintStart_toStartOf="@id/txtPersonalDetails"
                                 app:layout_constraintTop_toBottomOf="@id/txtTotalPayableDate" />
 
@@ -568,7 +587,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="@dimen/_75sdp"
-                                android:text=": Rs 40,000.00"
+                                tools:text=": Rs 40,000.00"
                                 android:textColor="@color/black"
                                 android:textSize="@dimen/_12ssp"
                                 android:textStyle="italic"
@@ -587,7 +606,7 @@
                                 android:hint="@string/enter_amount"
                                 android:inputType="number"
                                 android:maxLength="8"
-                                android:visibility="invisible"
+                                android:visibility="visible"
                                 app:layout_constraintBottom_toBottomOf="@id/labelTotalAmtPaid"
                                 app:layout_constraintStart_toEndOf="@id/labelLocation"
                                 app:layout_constraintTop_toTopOf="@id/labelTotalAmtPaid" />
@@ -598,7 +617,7 @@
                                 android:layout_height="@dimen/_20sdp"
                                 android:layout_marginEnd="@dimen/_10sdp"
                                 android:src="@drawable/printer_icon"
-                                android:visibility="invisible"
+                                android:visibility="visible"
                                 app:layout_constraintBottom_toBottomOf="@+id/labelTotalAmtPaid"
                                 app:layout_constraintEnd_toEndOf="parent"
                                 app:layout_constraintTop_toTopOf="@+id/labelTotalAmtPaid"
