--- a/app/src/main/res/layout/activity_visit_completion_of_customer.xml
+++ b/app/src/main/res/layout/activity_visit_completion_of_customer.xml
@@ -24,7 +24,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="@string/visit_complete"
+                android:text="@string/call_complete"
                 android:textColor="@color/white"
                 android:textSize="@dimen/_13ssp" />
 
@@ -327,10 +327,11 @@
                                 android:textColor="@color/black"
                                 android:textSize="@dimen/_12ssp"
                                 android:textStyle="italic"
+                                android:maxLength="10"
                                 app:layout_constraintBottom_toBottomOf="@id/labelDOB"
                                 app:layout_constraintStart_toEndOf="@id/labelLocation"
                                 app:layout_constraintTop_toTopOf="@id/labelDOB"
-                                tools:text=": 1/10/2023" />
+                                tools:text=":1/10/2023" />
 
 
                             <TextView
@@ -694,9 +695,10 @@
                 android:backgroundTint="@color/barnRed"
                 android:text="@string/complete_no_change"
                 android:textStyle="normal"
+                android:layout_marginTop="@dimen/_10sdp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+               app:layout_constraintTop_toBottomOf="@id/ivNotesIcon" />
 
 
             <Button
