--- a/app/src/main/res/layout/activity_details_of_customer.xml
+++ b/app/src/main/res/layout/activity_details_of_customer.xml
@@ -15,6 +15,7 @@
         android:id="@+id/MainConstraint"
         style="@style/MainConstraintStyle"
         android:layout_width="match_parent"
+        android:background="@color/skyBlue"
         android:layout_height="match_parent"
         tools:context=".npa_flow.details_of_customer.DetailsOfCustomerActivity">
 
@@ -33,7 +34,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="@string/details_of_customer"
+                android:text="@string/customer_details"
                 android:textColor="@color/white"
                 android:textSize="@dimen/_13ssp" />
 
@@ -255,6 +256,7 @@
                                 android:layout_marginStart="@dimen/_10sdp"
                                 android:layout_marginEnd="@dimen/_10sdp"
                                 android:src="@drawable/edit_icon"
+                                android:visibility="invisible"
                                 app:layout_constraintBottom_toBottomOf="@id/txtScheduledTime"
                                 app:layout_constraintStart_toEndOf="@id/txtScheduledTime"
                                 app:layout_constraintTop_toTopOf="@id/txtScheduledTime"
@@ -293,6 +295,7 @@
                                 android:layout_height="@dimen/_20sdp"
                                 android:layout_marginStart="@dimen/_5sdp"
                                 android:src="@drawable/call_round_icon"
+                                android:visibility="invisible"
                                 app:layout_constraintBottom_toBottomOf="@id/txtMobileNumber"
                                 app:layout_constraintStart_toEndOf="@id/txtMobileNumber"
                                 app:layout_constraintTop_toTopOf="@id/txtMobileNumber" />
@@ -597,7 +600,7 @@
                                 android:paddingStart="@dimen/_5sdp"
                                 android:paddingEnd="0dp"
                                 android:text="@string/total_amt_paid"
-                                android:visibility="visible"
+                                android:visibility="invisible"
                                 app:layout_constraintStart_toStartOf="@id/txtPersonalDetails"
                                 app:layout_constraintTop_toBottomOf="@id/txtTotalPayableDate" />
 
@@ -625,7 +628,7 @@
                                 android:hint="@string/enter_amount"
                                 android:inputType="number"
                                 android:maxLength="8"
-                                android:visibility="visible"
+                                android:visibility="invisible"
                                 app:layout_constraintBottom_toBottomOf="@id/labelTotalAmtPaid"
                                 app:layout_constraintStart_toEndOf="@id/labelLocation"
                                 app:layout_constraintTop_toTopOf="@id/labelTotalAmtPaid" />
@@ -636,7 +639,7 @@
                                 android:layout_height="@dimen/_20sdp"
                                 android:layout_marginEnd="@dimen/_10sdp"
                                 android:src="@drawable/printer_icon"
-                                android:visibility="visible"
+                                android:visibility="invisible"
                                 app:layout_constraintBottom_toBottomOf="@+id/labelTotalAmtPaid"
                                 app:layout_constraintEnd_toEndOf="parent"
                                 app:layout_constraintTop_toTopOf="@+id/labelTotalAmtPaid"
@@ -673,7 +676,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_5sdp"
-            android:paddingBottom="@dimen/_40sdp"
+            android:paddingBottom="@dimen/_50sdp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -684,7 +687,7 @@
                 android:layout_width="@dimen/_30sdp"
                 android:layout_height="@dimen/_30sdp"
                 android:layout_marginStart="@dimen/_10sdp"
-                android:layout_marginTop="@dimen/_1sdp"
+                android:layout_marginTop="@dimen/_5sdp"
                 android:src="@drawable/icons8notepad65ver4"
                 android:visibility="visible"
                 app:layout_constraintStart_toStartOf="parent"
@@ -696,7 +699,7 @@
                 android:layout_width="@dimen/_30sdp"
                 android:layout_height="@dimen/_30sdp"
                 android:layout_marginStart="@dimen/_10sdp"
-                android:layout_marginTop="@dimen/_1sdp"
+                android:layout_marginTop="@dimen/_5sdp"
                 android:layout_marginEnd="@dimen/_10sdp"
                 android:src="@drawable/history"
                 android:visibility="visible"
@@ -708,7 +711,7 @@
                 android:id="@+id/ivCall"
                 android:layout_width="@dimen/_50sdp"
                 android:layout_height="@dimen/_50sdp"
-                android:layout_marginTop="@dimen/_20sdp"
+                android:layout_marginTop="@dimen/_30sdp"
                 android:src="@drawable/call_round_icon"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
