--- a/app/src/main/res/layout/activity_payment_info_of_customer.xml
+++ b/app/src/main/res/layout/activity_payment_info_of_customer.xml
@@ -20,7 +20,7 @@
             <TextView
                 android:id="@+id/txtToolbarHeading"
                 android:textSize="@dimen/_13ssp"
-                android:text="@string/member_details"
+                android:text="@string/payment_information"
                 android:layout_gravity="center"
                 android:textColor="@color/white"
                 android:layout_width="wrap_content"
