--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,7 +15,7 @@
     <color name="darkRed">#8B0000</color>
     <color name="transparent">#00000000</color>
     <color name="dark_grey">#63666A</color>
-    <color name="skyBlue">#BED0E8</color>
+    <color name="skyBlue">#E8EAED</color>
     <color name="transparentColor">#55FFFFFF</color>
 
 
